src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>The close date for the postion</description>
        <inlineHelpText>The close date for the postion</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Business Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product and Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the position including its overview duties, responsibility and qualifications</description>
        <inlineHelpText>Description of the position including its overview duties, responsibility and qualifications</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Eperience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Senior level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Los Altos, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago, IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>The maximum salary for the postion</description>
        <inlineHelpText>The maximum salary for the postion</inlineHelpText>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>The minimum salary for the postion</description>
        <inlineHelpText>The minimum salary for the postion</inlineHelpText>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Hires__c</fullName>
        <description>Indicate the goal that how many people need to be hired for this positon.</description>
        <inlineHelpText>Indicate the goal that how many people need to be hired for this positon.</inlineHelpText>
        <label>Number of Hires</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>The open date to hire for the postion</description>
        <inlineHelpText>The open date to hire for the postion</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the job require traveling</description>
        <inlineHelpText>If the job require traveling</inlineHelpText>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>Closed_Positions</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Close_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Closed Positions</label>
    </listViews>
    <listViews>
        <fullName>Coming_Postions</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Close_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Coming Positions</label>
    </listViews>
    <listViews>
        <fullName>New_Position</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Number_of_Hires__c</columns>
        <columns>Hiring_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <label>New Position</label>
    </listViews>
    <listViews>
        <fullName>Open_Positions</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Open_Date__c</columns>
        <columns>Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Close_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Open Positions</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Authenticated_Site_Sharing_Access__c</fullName>
        <label>Authenticated Site Sharing Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Department_Sharing_Access__c</fullName>
        <label>Department Sharing Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Dept_Head_Hiring_Manager_Sharing_Access__c</fullName>
        <label>Dept Head Hiring Manager Sharing Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>The Close Data should be after the Open Date</description>
        <errorConditionFormula>Close_Date__c  &lt;  Open_Date__c</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>The Close Data should be after the Open Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max Pay</description>
        <errorConditionFormula>Min_Pay__c  &gt; Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
</CustomObject>